--- a/kaki-app/styles/globals.css
+++ b/kaki-app/styles/globals.css
@@ -5,6 +5,14 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --kaki-orange-light: rgb(236, 150, 10);
+  --kaki-orange-dark: rgb(232, 122, 4);
+
+  --kaki-blue-light: #ddf2ff;
+  --kaki-blue-dark: #0f4264;
+}
+
 html,
 body {
   width: 100%;
@@ -13,7 +21,7 @@ body {
   font-family: 'M PLUS Rounded 1c';
   font-weight: bold;
 
-  @apply bg-white dark:bg-gray-800;
+  @apply bg-gray-100 dark:bg-gray-800;
   margin: 0;
 }
 
@@ -26,22 +34,21 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
 
 nav {
-  @apply bg-white;
+  @apply bg-gray-100 dark:bg-gray-900 border-x-2 border-t-2 border-white;
   z-index: 10;
 }
 
+@media (prefers-color-scheme: dark) {
+  nav {
+    @apply border-x-2 border-t-2 border-black;
+  }
+}
+
 nav::after {
-  content: "";
-  position: absolute;
-  @apply w-full h-1 bottom-0 left-0;
-  border-color: rgb(176, 176, 176);
+  content: '';
+  @apply absolute w-full h-0.5 bottom-0 left-0;
   background-color: rgba(114, 161, 28, 0.758);
   background: linear-gradient(45deg, rgba(201, 126, 13, 0.758) 0%, rgba(114, 161, 28, 0.758) 50%);
 }
@@ -52,20 +59,33 @@ button {
 
 .kaki-button {
   padding: 0.5em;
-  background-color: rgb(255, 115, 0);
+  background-color: var(--kaki-orange-dark);
   font-weight: bold;
   border-radius: 5px;
   cursor: pointer;
   @apply transition text-white shadow-md duration-150 ease-in-out
 }
 
+@media (prefers-color-scheme: dark) {
+  .kaki-button {
+    background-color: var(--kaki-orange-light);
+    @apply text-gray-900;
+  }
+}
+
 .kaki-button:hover {
-  background-color: rgb(255, 72, 0);
+  background-color: var(--kaki-orange-dark);
 }
 
 .color-orangered {
-  color: rgb(236, 150, 10);
+  color: var(--kaki-orange-dark);
   @apply drop-shadow-sm
+}
+
+@media (prefers-color-scheme: dark) {
+  .color-orangered {
+    color: var(--kaki-orange-light);
+  }
 }
 
 #__next {
@@ -78,30 +98,26 @@ main {
   @apply h-full w-full m-0;
 
   font-size: 20px;
-
   
-  color: #0f4264;
+  color: var(--kaki-blue-dark);
   
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 @media (prefers-color-scheme: dark) {
-    main {
-    color:  #b8b8db;
+  
+  html {
+    color-scheme: dark;
   }
-}
 
-.menuTop {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  top: 10px;
-  left: 0;
-  font-size: 1em;
-  color: rgb(233, 141, 12);
-}
+  nav::after {
+    background-color: rgba(114, 161, 28, 0.758);
+    background: linear-gradient(45deg, rgba(105, 65, 6, 0.758) 0%, rgba(64, 90, 16, 0.758) 50%);
+  }
 
-.menuTop h2 {
-  margin: 0px;
+  main {
+    color:  var(--kaki-blue-light);
+  }
+  
 }
